Attempt to fix image size on mobile orientation change

--- a/public/styles.css
+++ b/public/styles.css
@@ -133,6 +133,7 @@ html {
 .content-block .images-block .image-wrapper img {
     /* fit img to wrapper height */
     height: 100%;
+    max-height: 100%;
 
     /* center in wrapper */
     margin: auto;
